button cursor added

--- a/src/components/Spinner.css
+++ b/src/components/Spinner.css
@@ -30,6 +30,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .buttons button:first-child {
